--- a/style.css
+++ b/style.css
@@ -3,8 +3,12 @@
    height: 700px;
    width: 900px;
    display: grid;
-   grid-template-rows: 133px 133px 133px;
-   grid-template-columns: 133px 133px 133px;
+   /* grid-template-rows: 133px 133px 133px;
+   grid-template-columns: 133px 133px 133px; */
+   grid-template-columns: repeat(3 1fr);
+   grid-template-rows: repeat(3 1fr);
+   row-gap: 12px;
+   column-gap: 12px; 
 }
 
 .item{
