--- a/style.css
+++ b/style.css
@@ -1,18 +1,25 @@
 .container{
    background-color: red;
    height: 700px;
-   width: 900px;
    display: grid;
    /* grid-template-rows: 133px 133px 133px;
    grid-template-columns: 133px 133px 133px; */
-   grid-template-columns: repeat(3 1fr);
-   grid-template-rows: repeat(3 1fr);
+   /* grid-template-columns: repeat(3 1fr);
+   grid-template-rows: repeat(3 1fr); */
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-template-rows: 43px 1fr 1fr;
    row-gap: 12px;
    column-gap: 12px; 
 }
 
 .item{
      background-color: black;
-     height: 122px;
-     width: 122px;
+     /* height: 122px;
+     width: 122px; */
+}
+
+.item1{
+   grid-column-start: 1;
+   grid-column-end: 4;
+   color: white;
 }
