--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
    /* grid-template-columns: repeat(3 1fr);
    grid-template-rows: repeat(3 1fr); */
    grid-template-columns: 1fr 1fr 1fr;
-   grid-template-rows: 43px 1fr 1fr;
+   grid-template-rows: 43px 1fr 43px;
    row-gap: 12px;
    column-gap: 12px; 
 }
 
 .item{
-     background-color: black;
+     background-color: skyblue;
      /* height: 122px;
      width: 122px; */
 }
@@ -22,4 +22,11 @@
    grid-column-start: 1;
    grid-column-end: 4;
    color: white;
+   background-color: black;
+}
+
+.footer{
+   grid-column-start: 1;
+   grid-column-end: 4;
+   background-color: black;
 }
