--- a/style.css
+++ b/style.css
@@ -1,32 +1,6 @@
-.container{
-   background-color: red;
-   height: 700px;
+.grid-container{
    display: grid;
-   /* grid-template-rows: 133px 133px 133px;
-   grid-template-columns: 133px 133px 133px; */
-   /* grid-template-columns: repeat(3 1fr);
-   grid-template-rows: repeat(3 1fr); */
-   grid-template-columns: 1fr 1fr 1fr;
-   grid-template-rows: 43px 1fr 43px;
-   row-gap: 12px;
-   column-gap: 12px; 
-}
-
-.item{
-     background-color: skyblue;
-     /* height: 122px;
-     width: 122px; */
-}
-
-.item1{
-   grid-column-start: 1;
-   grid-column-end: 4;
-   color: white;
-   background-color: black;
-}
-
-.footer{
-   grid-column-start: 1;
-   grid-column-end: 4;
-   background-color: black;
+   grid-template-columns: auto auto auto;
+   background-color: #2196F3;
+   padding: 10px;
 }
