--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 .grid-container{
-   display: grid;
+   display: grid; 
+   /* display: inline-grid; */
    grid-template-columns: auto auto auto;
    background-color: #2196F3;
    padding: 10px;
+   column-gap: 50px;
+   row-gap: 50px;
 }
 
 .grid-item{
