use property justify-content: space-evenly

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
    padding: 10px;
     column-gap: 50px;
    row-gap: 50px; 
+   justify-content: space-evenly;
+   
 }
 
 .grid-item{
@@ -20,7 +22,8 @@
 
 } 
 
-.item-1{
+ /* .item-1{
     grid-column-start: 1;
    grid-column-end: 4; 
-}
+}  */
+
