use justify-content: space-around

--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
    padding: 10px;
     column-gap: 50px;
    row-gap: 50px; 
-   justify-content: space-evenly;
+   /* justify-content: space-evenly; */
+   justify-content: space-around;
    
 }
 
