use justify-content: space-between

--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
     column-gap: 50px;
    row-gap: 50px; 
    /* justify-content: space-evenly; */
-   justify-content: space-around;
-   
+   /* justify-content: space-around; */
+   justify-content: space-between;
 }
 
 .grid-item{
