--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@
    row-gap: 50px; 
    /* justify-content: space-evenly; */
    /* justify-content: space-around; */
-   justify-content: space-between;
-}
+   /* justify-content: space-between;*/
+   justify-content: center;
+} 
 
 .grid-item{
    background-color: rgba(255, 255, 255, 0.8); 
