use justify-content: start

--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
    /* justify-content: space-evenly; */
    /* justify-content: space-around; */
    /* justify-content: space-between;*/
-   justify-content: center;
+   /* justify-content: center; */
+    justify-content: start;
 } 
 
 .grid-item{
