--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
    /* justify-content: space-around; */
    /* justify-content: space-between;*/
    /* justify-content: center; */
-    justify-content: start;
+    /* justify-content: start; */
+    justify-content: end;
 } 
 
 .grid-item{
