--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@
    row-gap: 50px; 
    margin-top: 20px;
    height: 400px;
-  align-content: center;
+  /* align-content: center; */
+  align-content: space-evenly;
    
 } 
 
