--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@
    height: 400px;
   /* align-content: center; */
   /* align-content: space-evenly; */
-  align-content: space-around;
+  /* align-content: space-around; */
+  align-content: space-between;
    
 } 
 
