git commit -m use align-content center and end

--- a/style.css
+++ b/style.css
@@ -25,8 +25,9 @@
   /* align-content: center; */
   /* align-content: space-evenly; */
   /* align-content: space-around; */
-  align-content: space-between;
-   
+  /* align-content: space-between; */
+  align-content: center;
+  align-content: end;
 } 
 
 .grid-item{
