--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@
 
  .item-1{
    /* grid-column: 1/5; */
-    grid-column: 1/ span 3; 
+    /* grid-column: 1/ span 3;  */
+    grid-row: 1/4;
    
 } 
 
