--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
  .item-1{
    /* grid-column: 1/5; */
     /* grid-column: 1/ span 3;  */
-    grid-row: 1/4;
+    grid-row: 1/ span 4;
    
 } 
 
